Fixing alignment...maybe
And a CSS style

--- a/less/pages/encrypt/base.less
+++ b/less/pages/encrypt/base.less
@@ -68,3 +68,6 @@ a {
 .fadedOut{
 	opacity: 0 !important;
 }
+.fadedIn{
+	opacity: 1 !important;
+}
